--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "@tailwindcss/typography": "^0.5.7",
+    "gray-matter": "^4.0.3",
     "next": "12.3.1",
+    "next-mdx-remote": "^4.1.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "redux": "^4.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "@types/node": "18.7.21",
